--- a/RemMe/RemMe.iOS/RememberMe.iOS.csproj
+++ b/RemMe/RemMe.iOS/RememberMe.iOS.csproj
@@ -8,9 +8,9 @@
     <ProjectGuid>{A2A20577-9154-43C7-AFBC-A86B61A15B18}</ProjectGuid>
     <ProjectTypeGuids>{FEACFBD2-3405-455C-9665-78FE426C6842};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Exe</OutputType>
-    <RootNamespace>RemMe.iOS</RootNamespace>
+    <RootNamespace>RememberMe.iOS</RootNamespace>
     <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
-    <AssemblyName>RemMeiOS</AssemblyName>
+    <AssemblyName>RememberMeiOS</AssemblyName>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
   </PropertyGroup>
@@ -106,6 +106,14 @@
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="SQLite.Net, Version=3.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\SQLite.Net.Core-PCL.3.1.1\lib\portable-win8+net45+wp8+wpa81+MonoAndroid1+MonoTouch1\SQLite.Net.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="SQLite.Net.Platform.XamarinIOS.Unified, Version=3.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\SQLite.Net-PCL.3.1.1\lib\Xamarin.iOS10\SQLite.Net.Platform.XamarinIOS.Unified.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
@@ -128,9 +136,9 @@
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\RemMe\RemMe.csproj">
+    <ProjectReference Include="..\RemMe\RememberMe.csproj">
       <Project>{35F94FB0-864A-44EF-866B-10CEC52349C1}</Project>
-      <Name>RemMe</Name>
+      <Name>RememberMe</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
