--- a/RemMe/RemMe.iOS/Info.plist
+++ b/RemMe/RemMe.iOS/Info.plist
@@ -36,11 +36,30 @@
 		<string>Default-Portrait.png</string>
 		<string>Default-Portrait@2x.png</string>
 	</array>
-	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
 	<key>CFBundleShortVersionString</key>
 	<string>0.1</string>
 	<key>UIPrerenderedIcon</key>
 	<true/>
+	<key>UIStatusBarTintParameters</key>
+	<dict>
+		<key>UINavigationBar</key>
+		<dict>
+			<key>Style</key>
+			<string>UIBarStyleDefault</string>
+			<key>Translucent</key>
+			<false/>
+			<key>TintColor</key>
+			<dict>
+				<key>Red</key>
+				<real>1</real>
+				<key>Green</key>
+				<real>0.188235294117647</real>
+				<key>Blue</key>
+				<real>0.290196078431373</real>
+			</dict>
+		</dict>
+	</dict>
+	<key>UILaunchStoryboardName</key>
+	<string>LaunchScreen</string>
 </dict>
 </plist>
